--- a/YSWeibo/Base.lproj/Main.storyboard
+++ b/YSWeibo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="u7G-kd-kah">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,22 +9,112 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="nrg-O5-hdB">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="YSWeibo" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tabBarController id="u7G-kd-kah" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="CVU-2J-wKD">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="axt-3l-WDs" kind="relationship" relationship="viewControllers" id="8iG-md-fXL"/>
+                        <segue destination="8en-Zk-xGk" kind="relationship" relationship="viewControllers" id="Soi-P9-wss"/>
+                        <segue destination="EEw-hw-xKH" kind="relationship" relationship="viewControllers" id="kyr-5W-rl4"/>
+                        <segue destination="EZF-6J-urQ" kind="relationship" relationship="viewControllers" id="zQl-sM-uCP"/>
+                        <segue destination="07l-bZ-RtE" kind="relationship" relationship="viewControllers" id="IcY-nF-re7"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mwL-aK-edw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-890" y="-309"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="nXs-dU-B0D">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="axt-3l-WDs" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="QPP-mH-YDu"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c1J-3Y-Mxp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="174" y="-417"/>
+        </scene>
+        <!--Message-->
+        <scene sceneID="Kf2-4p-Ph1">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Message" id="8en-Zk-xGk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="LxE-dF-6Hb"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WEZ-2G-WES" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="180" y="-310"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="fxp-eC-Bor">
+            <objects>
+                <tableViewController id="s53-V4-Emp" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="kwX-mo-9AN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="6mU-pN-1U4">
+                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="6mU-pN-1U4" id="jcR-iF-Z1X">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="s53-V4-Emp" id="zAm-Rr-Iq7"/>
+                            <outlet property="delegate" destination="s53-V4-Emp" id="q71-UC-aJ8"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Xf3-Lz-mmy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1uz-sH-Bcg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1516" y="-303"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4cZ-nw-JT2">
+            <objects>
+                <navigationController id="EEw-hw-xKH" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" id="yNI-mt-OWR"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="KER-dS-Dvh">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="s53-V4-Emp" kind="relationship" relationship="rootViewController" id="UeX-L2-iTR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zNm-4O-3ra" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="607" y="-276"/>
+        </scene>
+        <!--Discover-->
+        <scene sceneID="unu-i6-Kqk">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Discover" id="EZF-6J-urQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="G7L-6b-ScZ"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Qp-dk-Xbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="179" y="-226"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="Hbk-e3-Nvr">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" id="07l-bZ-RtE" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ugq-4d-dui"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9hg-fm-Q0J" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="177" y="-146"/>
         </scene>
     </scenes>
 </document>
