--- a/YSWeibo/Base.lproj/Main.storyboard
+++ b/YSWeibo/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="nrg-O5-hdB">
             <objects>
-                <tabBarController id="u7G-kd-kah" sceneMemberID="viewController">
+                <tabBarController id="u7G-kd-kah" customClass="MainViewController" customModule="YSWeibo" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="CVU-2J-wKD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
