--- a/YSWeibo/Classes/Main/Visitor/VistorView.xib
+++ b/YSWeibo/Classes/Main/Visitor/VistorView.xib
@@ -29,7 +29,7 @@
                         <constraint firstAttribute="height" constant="440" id="00Z-ey-5L3"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="visitordiscover_feed_image_house" translatesAutoresizingMaskIntoConstraints="NO" id="gJo-oa-3N1" userLabel="homeIcon">
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="visitordiscover_feed_image_house" translatesAutoresizingMaskIntoConstraints="NO" id="gJo-oa-3N1" userLabel="homeIcon">
                     <rect key="frame" x="140" y="229" width="94" height="90"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="5PY-4u-260"/>
@@ -82,6 +82,11 @@
                 <constraint firstItem="7XR-wj-xUv" firstAttribute="trailing" secondItem="f73-L9-hiH" secondAttribute="trailing" id="sHy-KA-dfG"/>
                 <constraint firstItem="gJo-oa-3N1" firstAttribute="centerY" secondItem="2a6-Mb-ab4" secondAttribute="centerY" constant="20" id="sKf-m2-CPF"/>
             </constraints>
+            <connections>
+                <outlet property="iconView" destination="gJo-oa-3N1" id="7Fp-Yy-af0"/>
+                <outlet property="rotationView" destination="2a6-Mb-ab4" id="lYV-ed-qLD"/>
+                <outlet property="tipLabel" destination="f73-L9-hiH" id="4hQ-h3-qMa"/>
+            </connections>
             <point key="canvasLocation" x="-134.5" y="-95.5"/>
         </view>
     </objects>
